--- a/logos.conf
+++ b/logos.conf
@@ -1,50 +1,200 @@
-[bfmtv]
+[353]
+channel_name=BFM TV
 logo_zone=27,423,95,505
 logo_path=./Logos/bfmtv.jpg
 text_zone=./Masks/bfmtv_Mask.png
 
-[france24]
+[254]
+channel_name=France 24
 logo_zone=621,493,665,555
 logo_path=./Logos/france24.jpg
 text_zone=./Masks/france24_Mask.png
 
-[france3]
+[3]
+channel_name=France 3
 logo_zone=636,41,673,104
 logo_path=./Logos/france3.jpg
 text_zone=./Masks/france3_Mask.png
 
 
-[france3nat]
+[136]
+channel_name=France 3 Alpes
+logo_zone=636,41,673,104
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3_Mask.png
+
+
+
+[113]
+channel_name=France 3 Alsace
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
 text_zone=./Masks/france3nat_Mask.png
 
 
-[francecoteazur]
+[114]
+channel_name=France 3 Aquitaine
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3nat_Mask.png
+
+
+[270]
+channel_name=France 3 Auvergne
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3nat_Mask.png
+
+
+[266]
+channel_name=France 3 Normandie (Caen)
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3nat_Mask.png
+
+[117]
+channel_name=France 3 Bourgogne
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3nat_Mask.png
+
+[118]
+channel_name=France 3 Bretagne
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3nat_Mask.png
+
+[119]
+channel_name=France 3 Centre - Val de Loire
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/france3nat_Mask.png
+
+[255]
+channel_name=France 3 Champagne-Ardenne
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
 text_zone=./Masks/francecoteazur_Mask.png
 
 
-[franceinfo]
+[271]
+channel_name=France 3 Corse ViaStella
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[134]
+channel_name=France 3 Côte d'Azur
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[272]
+channel_name=France 3 Franche-Comté
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[123]
+channel_name=France 3 Normandie (Rouen)
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[125]
+channel_name=France 3 Languedoc-Roussillon
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+
+[126]
+channel_name=France 3 Limousin
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[127]
+channel_name=France 3 Lorraine
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+
+[128]
+channel_name=France 3 Midi-Pyrénées
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[129]
+channel_name=France 3 Nord-Pas-de-Calais
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[10]
+channel_name=France 3 Paris Île-de-France
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[130]
+channel_name=France 3 Pays de la Loire
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[251]
+channel_name=France 3 Picardie
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+[132]
+channel_name=France 3 Poitou-Charentes
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+
+[133]
+channel_name=France 3 Provence-Alpes
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+
+[135]
+channel_name=France 3 Rhône-Alpes
+logo_zone=640,43,674,98
+logo_path=./Logos/france3.jpg
+text_zone=./Masks/francecoteazur_Mask.png
+
+
+[536]
+channel_name=franceinfo:
 logo_zone=51,477,142,506
 logo_path=./Logos/franceinfo.jpg
 text_zone=./Masks/franceinfo_Mask.png
 
 
-[itele]
+[42]
+channel_name=itele
 logo_zone=24,24,85,104
 logo_path=./Logos/itele.jpg
 text_zone=./Masks/itele_Mask.png
 
 
-[lci]
+[44]
+channel_name=lci
 logo_zone=20,507,86,534
 logo_path=./Logos/lci.jpg
 text_zone=./Masks/lci_Mask.png
 
 
-[tf1]
+[1]
+channel_name=tf1
 logo_zone=627,28,681,62
 logo_path=./Logos/tf1.jpg
 text_zone=./Masks/tf1_Mask.png
