image path + text mser makefile

--- a/logos.conf
+++ b/logos.conf
@@ -13,7 +13,7 @@ text_zone=./Masks/france24_Mask.png
 [3]
 channel_name=France 3
 logo_zone=636,41,673,104
-logo_path=./Logos/france3.jpg
+logo_path=./Logos/france3National_Mask.png
 text_zone=./Masks/france3_Mask.png
 
 
@@ -29,147 +29,147 @@ text_zone=./Masks/france3_Mask.png
 channel_name=France 3 Alsace
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [114]
 channel_name=France 3 Aquitaine
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [270]
 channel_name=France 3 Auvergne
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [266]
 channel_name=France 3 Normandie (Caen)
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [117]
 channel_name=France 3 Bourgogne
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [118]
 channel_name=France 3 Bretagne
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [119]
 channel_name=France 3 Centre - Val de Loire
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/france3nat_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [255]
 channel_name=France 3 Champagne-Ardenne
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [271]
 channel_name=France 3 Corse ViaStella
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [134]
 channel_name=France 3 Côte d'Azur
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [272]
 channel_name=France 3 Franche-Comté
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [123]
 channel_name=France 3 Normandie (Rouen)
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [125]
 channel_name=France 3 Languedoc-Roussillon
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [126]
 channel_name=France 3 Limousin
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [127]
 channel_name=France 3 Lorraine
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [128]
 channel_name=France 3 Midi-Pyrénées
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [129]
 channel_name=France 3 Nord-Pas-de-Calais
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [10]
 channel_name=France 3 Paris Île-de-France
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [130]
 channel_name=France 3 Pays de la Loire
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [251]
 channel_name=France 3 Picardie
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 [132]
 channel_name=France 3 Poitou-Charentes
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [133]
 channel_name=France 3 Provence-Alpes
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [135]
 channel_name=France 3 Rhône-Alpes
 logo_zone=640,43,674,98
 logo_path=./Logos/france3.jpg
-text_zone=./Masks/francecoteazur_Mask.png
+text_zone=./Masks/france3_Mask.png
 
 
 [536]
